# ai_worker

./: .gitignore  README.md  ai_worker_ci.repos
6.2.0/: Dockerfile  docker_build.sh  docker_run.sh  docker_uefi.sh
6.2.0/build_sdk/: build_sdk.sh
6.2.0/build_sdk/patch/: nvgetty.sh  ssd_setup.tar.xz  ver_history.txt  ver_info.txt
6.2.0/build_sdk/scripts/: build_kernel.sh  build_uefi.sh  docker_flash_orin.sh  docker_kernel_build.sh  flash_orin.sh  rebuild_uefi.sh
docker/: Dockerfile.amd64  Dockerfile.arm64  docker-compose.yml
docker/s6-services/common/: ros2_service_finish.sh  ros2_service_run.sh
docker/s6-services/ffw_bg2_follower_ai/: finish
ffw/: CHANGELOG.rst  package.xml
ffw_bringup/: CHANGELOG.rst  package.xml  setup.py
ffw_bringup/config/common/: gz_bridge.yaml  rs_serial.yaml
ffw_bringup/config/ffw_bg2_rev3_follower/: ffw_bg2_follower_ai_hardware_controller.yaml
ffw_bringup/config/ffw_bg2_rev4_follower/: ffw_bg2_follower_ai_hardware_controller.yaml  ffw_bg2_follower_ai_inference_hardware_controller.yaml  ffw_bg2_follower_initial_positions.yaml  pack_position.yaml
ffw_bringup/config/ffw_bh5_rev1_follower/: ffw_bh5_follower_ai_hardware_controller.yaml  ffw_bh5_follower_initial_positions.yaml
ffw_bringup/config/ffw_lg2_leader/: ffw_lg2_leader_ai_hardware_controller.yaml
ffw_bringup/config/ffw_lg2_leader_mini/: ffw_lg2_leader_mini_ai_hardware_controller.yaml
ffw_bringup/config/ffw_sg2_rev1_follower/: ffw_sg2_follower_ai_inference_hardware_controller.yaml  ffw_sg2_follower_initial_positions.yaml
ffw_bringup/ffw_bringup/: head_eef_tracker.py
ffw_bringup/launch/: ffw_bg2_follower_ai.launch.py  ffw_bg2_follower_gazebo.launch.py  ffw_bg2_pack.launch.py  ffw_bh5_follower_ai.launch.py  ffw_bh5_follower_ai_gazebo.launch.py  ffw_lg2_leader_mini_ai.launch.py  ffw_sg2_follower_ai.launch.py  ffw_sg2_follower_ai_gazebo.launch.py  lidar_dual.launch.py
ffw_bringup/worlds/: empty_world.sdf
ffw_collision_checker/: CMakeLists.txt  package.xml
ffw_collision_checker/include/: ffw_ik_solver.h
ffw_collision_checker/src/: collision_checker copy 2.cpp  collision_checker copy 3.cpp  collision_checker copy.cpp  collision_checker.cpp  ffw_ik_solver.cpp  ffw_ik_solver_test.cpp  proxsuite_example.cpp  replay copy.cpp  replay.cpp
ffw_collision_checker/srv/: CheckCollision.srv  SolveCollisionNaive.srv
ffw_description/: CHANGELOG.rst  package.xml
ffw_description/gazebo/ffw_bh5_rev1_follower/: ffw_bh5_follower.gazebo.xacro
ffw_description/ros2_control/ffw_bg2_rev4_follower/: ffw_bg2_follower.ros2_control.xacro  ffw_bg2_follower_smooth.ros2_control.xacro  ffw_bg2_sensor.ros2_control.xacro
ffw_description/ros2_control/ffw_bh5_rev1_follower/: ffw_bh5_follower.ros2_control.xacro  ffw_bh5_follower_one.ros2_control.xacro
ffw_description/ros2_control/ffw_lg2_leader/: ffw_lg2_leader_left.ros2_control.xacro  ffw_lg2_leader_right.ros2_control.xacro
ffw_description/ros2_control/ffw_lg2_leader_mini/: ffw_lg2_leader_mini.ros2_control.xacro  ffw_lg2_leader_mini_left.ros2_control.xacro  ffw_lg2_leader_mini_right.ros2_control.xacro
ffw_description/ros2_control/ffw_sg2_rev1_follower/: ffw_sg2_base.ros2_control.xacro  (+3 more)
ffw_description/rviz/: ffw.rviz
ffw_joint_trajectory_command_broadcaster/: CHANGELOG.rst
ffw_joint_trajectory_command_broadcaster/src/: joint_trajectory_command_broadcaster_parameters.yaml
ffw_joystick_controller/: CHANGELOG.rst
ffw_joystick_controller/src/: joystick_controller.cpp
ffw_kinematics/: CHANGELOG.rst  CMakeLists.txt  package.xml
ffw_kinematics/launch/: ffw_arm_ik.launch.py  ik_solver_comparison.launch.py  pinocchio_ik_solver.launch.py  realtime_ik_solver.launch.py  realtime_ik_solver_jl.launch.py
ffw_kinematics/src/: arm_ik_solver.cpp  dual_arm_ik_solver.cpp  dual_arm_trajectory_commander.cpp  ffw_arm_ik_solver.cpp  ffw_arm_trajectory_commander.cpp  ik_solver_comparison.cpp  kdl_ik_solver.cpp  pinocchio_ik_solver.cpp  realtime_ik_solver_jl.cpp  target_pose_publisher.cpp  vr_hand_pose_transformer.cpp
ffw_moveit_config/: CHANGELOG.rst
ffw_moveit_config/config/: joint_limits.yaml
ffw_moveit_config/launch/: move_group.launch.py  moveit_core.launch.py
ffw_navigation/: package.xml
ffw_navigation/config/: amcl_localization.yaml  navigation.yaml  navigation_mppi.yaml
ffw_navigation/launch/: navigation.launch.py  online_sync_launch.py
ffw_navigation/maps/: map.pgm  map.yaml  my_map.yaml
ffw_navigation/src/: is_path_length_under.cpp
ffw_radio/: CMakeLists.txt  package.xml
ffw_radio/launch/: radio_control_mapper.launch.py  radio_display.launch.py
ffw_radio/scripts/: install_udev.sh
ffw_radio/src/: radio_control_mapper.cpp  radio_dashboard.cpp
ffw_radio/udev/: 99-radiolink.rules
ffw_robot_manager/: CHANGELOG.rst
ffw_robot_manager/src/: robot_type.cpp  ubetter_battery_model.cpp
ffw_spring_actuator_controller/: CHANGELOG.rst
ffw_swerve_drive_controller/: CHANGELOG.rst
ffw_swerve_drive_controller/src/: swerve_drive_controller.cpp
ffw_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
ffw_teleop/ffw_teleop/: data_logger.py  gesture_hand_controller.py  gripper_controller.py  hand_controller.py  keyboard_control_simulation copy.py  keyboard_control_simulation.py  mobile_teleop.py  preset_hand_controller.py
ffw_teleop/launch/: gesture_hand_teleop.launch.py  slider_control_with_collision.launch.py  vr_publisher.launch.py
ffw_teleop/scripts/: data_logger  keyboard_control_simulation  mobile_teleop  trajectory_test
ffw_teleop/src/: keyboard_swerve_drive.cpp
ffw_vr_control/: CMakeLists.txt  package.xml
ffw_vr_control/include/ffw_vr_control/: vr_hand_control_node.hpp
ffw_vr_control/launch/: vr_hand_control.launch.py
ffw_vr_control/src/: subscribe_vr_pose.py  test_pose_publisher.py  vr_hand_control_node.cpp
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
log/: latest_build
system_manager/: Dockerfile  README.md  docker-compose.yml
system_manager/system_manager/: agent_client.py  api.py  models.py
system_manager/system_manager_ui/: Dockerfile  README_UI.md
(+237 files in other folders)
