<?xml version="1.0"?>
<package format="3">
  <name>ffw_vr_control</name>
  <version>0.1.0</version>
  <description>VR-based teleoperation using TRAC-IK for a 7-DOF robotic arm</description>

  <maintainer email="wsh@robotis.com">Sungho Woo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_kdl</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>trac_ik_lib</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>libwebsocketpp-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
